@@ -1,0 +1,27 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "F. W. Smith. Optical constants of a hydrogenated amorphous carbon film, <a href=\"https://doi.org/10.1063/1.333135\"><i>J. Appl. Phys.</i> <b>55</b>, 764 (1984)</a>"
+COMMENTS: "Annealed (Ta = 650 °C)"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.261 1.38 0.697
+        0.276 1.45 0.714
+        0.292 1.52 0.721
+        0.310 1.57 0.736
+        0.331 1.64 0.734
+        0.354 1.70 0.730
+        0.381 1.78 0.721
+        0.413 1.85 0.702
+        0.451 1.90 0.685
+        0.496 1.94 0.667
+        0.551 1.95 0.686
+        0.620 2.06 0.662
+        0.708 2.18 0.628
+        0.827 2.28 0.588
+SPECS:
+    wavelength_vacuum: true
+    substrate: fused_quartz
+    
