@@ -1,0 +1,26 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "F. W. Smith. Optical constants of a hydrogenated amorphous carbon film, <a href=\"https://doi.org/10.1063/1.333135\"><i>J. Appl. Phys.</i> <b>55</b>, 764 (1984)</a>"
+COMMENTS: "As-deposited (Td = 250 °C)"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.261 1.74 0.246
+        0.276 1.75 0.220
+        0.292 1.76 0.195
+        0.310 1.77 0.168
+        0.331 1.77 0.144
+        0.354 1.77 0.119
+        0.381 1.76 0.089
+        0.413 1.76 0.061
+        0.451 1.75 0.041
+        0.496 1.75 0.026
+        0.551 1.74 0.0120
+        0.620 1.74 0.0065
+        0.708 1.74 0.0057
+        0.827 1.74 0.0030
+SPECS:
+    wavelength_vacuum: true
+    substrate: fused_quartz
