@@ -1,0 +1,12 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>Hydrogenated amorphous carbon (aC:H, HAC)</h1>
+
+<h2>External links</h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Amorphous_carbon">Amorphous carbon - Wikipedia</a></li>
+</ul>
