@@ -1,5 +1,12 @@
 ﻿============================== next release ==============================
 
+  new data (thanks to Henning Moldenhauer, Technische Universität Dortmund, Germany, for suggesting data!)
+    other/amorphous/HAC/Smith-Td250C.yml
+    other/amorphous/HAC/Smith-Ta350C.yml
+    other/amorphous/HAC/Smith-Ta450C.yml
+    other/amorphous/HAC/Smith-Ta550C.yml
+    other/amorphous/HAC/Smith-Ta650C.yml
+    other/amorphous/HAC/Smith-Ta750C.yml
   new data (thanks to Leon Avakyan, Southern Federal University, Rostov-on-Don, Russia, for submitting data in YAML format!)
     other/intermetallics/PtAl2/Chen.yml
     other/intermetallics/AuAl2/Chen.yml
@@ -14,7 +21,7 @@
     other/perovskite/2D HOIP/Song-DJ3.yml
     other/perovskite/2D HOIP/Song-DJ4.yml
     main/C/Song-HiPco.yml
-    main/C/Song-HiPco.yml
+    main/C/Song-Arc.yml
   new data (thanks to Zheru Qiu, École Polytechnique Fédérale de Lausanne, Switzerland, for suggesting data!)
     main/Nb/Weaver.yml
     main/W/Weaver.yml
